--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
 
         #start-button,
+        #test-button,
         .choice-button,
         #yes-no-buttons,
         #download-buttons {
